@@ -158,7 +158,7 @@ env.Append(BUILDERS = {'MoBuild' : mo_bld})
 
 pot_args = ['xgettext','--from-code=UTF-8', '--foreign-user', '--package-name=$PACKAGE',
 		'--copyright-holder=Jacek Sieka', '--msgid-bugs-address=dcplusplus-devel@lists.sourceforge.net',
-		'--no-wrap', '--keyword=_', '--output=$TARGET', '$SOURCES']
+		'--no-wrap', '--keyword=_', '--keyword=T_', '--output=$TARGET', '$SOURCES']
 
 pot_bld = Builder (action = Action([pot_args], 'Extracting messages to $TARGET from $SOURCES'))
 env.Append(BUILDERS = {'PotBuild' : pot_bld})
