@@ -188,9 +188,8 @@ BEGIN
     EDITTEXT        IDC_DEFAULT_AWAY_MESSAGE,16,152,145,14,ES_MULTILINE | ES_AUTOHSCROLL | WS_VSCROLL
     GROUPBOX        "Set timestamps",IDC_SETTINGS_TIME_STAMPS_FORMAT,174,141,96,32
     EDITTEXT        IDC_TIME_STAMPS_FORMAT,180,152,80,15,ES_AUTOHSCROLL
-    GROUPBOX        "Language file",IDC_SETTINGS_LANGUAGE_FILE,7,174,261,32
-    EDITTEXT        IDC_LANGUAGE,16,185,188,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "&Browse...",IDC_BROWSE,210,185,50,14
+    GROUPBOX        "Language",IDC_SETTINGS_LANGUAGE_FILE,7,174,261,32
+    COMBOBOX        IDC_LANGUAGE,16,185,238,14,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Note; most of these options require that you restart DC++",IDC_SETTINGS_REQUIRES_RESTART,7,210,253,8
 END
 
