@@ -6,7 +6,8 @@
 * [ADC] Searches filtered by token if available so that each search window only gets its own results
 * [ADC] Implemented test version of bloom filters which will dramatically reduce hub bandwidth usage for TTH searches
 * Fixed a crash with partial list browsing
-
+* Replaced homegrown i18n solution with gettext
+§
 -- 0.704 2007-12-14 --
 * Hub lists added to utilize Coral's distributed network (ullner)
 * Use system header arrows on common controls 6+ (thanks poy)
